# MonteCarloIntegration

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: MathFunction.hh  MonteCarloIntegration.cc  MonteCarloIntegration.hh  main.cc
